# woa-2025-intro-to-langchain

./: .gitignore  README.md  index.html  jupyter_nbconvert_config.py  presentation.ipynb  pyproject.toml
.github/workflows/: deploy.yaml
data/: dataset.csv  long_dataset.csv
data/prompts/: anime.txt  computer_science.txt  fishing.txt  guitar.txt
